TDMA solver work started

--- a/Tutorial/TDMA/TDMA.ipynb
+++ b/Tutorial/TDMA/TDMA.ipynb
@@ -2,13 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import  numpy as np\n",
+    "import sympy as sp\n",
+    "import os, sys\n",
+    "sys.path.append(os.path.abspath(os.path.join('../..')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.solvers import GaussElimination"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 100 # No of nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q= 1e6\n",
+    "k = 0.5\n",
+    "Delta_x = 0.02 / n\n",
+    "T1 = 100\n",
+    "T7 = 200"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import os, sys\n",
-    "sys.path.append(os.path.abspath(os.path.join('../..')))"
+    "b = np.zeros(n)\n",
+    "A = np.zeros((n,n))"
    ]
   },
   {
@@ -17,7 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.solvers import GaussElimination,BackSubstitution"
+    "for i in range(1, n-1):\n",
+    "    b[i] = (-q * (Delta_x**2))/k"
    ]
   },
   {
@@ -26,8 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.array([[3,2,1],[1,4,-3],[-5,8,-4]], dtype=float)\n",
-    "b = np.array([10,0,-1], dtype=float)"
+    "b[0] = -T1 + (-q * (Delta_x**2))/k\n",
+    "b[n-1] = -T7 + (-q * (Delta_x**2))/k"
    ]
   },
   {
@@ -36,58 +79,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A,b=GaussElimination(A,b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = BackSubstitution(A,b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 3.        ,  2.        ,  1.        ],\n",
-       "       [ 0.        ,  3.33333333, -3.33333333],\n",
-       "       [ 0.        ,  0.        ,  9.        ]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A"
+    "for i in range(n-1):\n",
+    "    A[i][i] = -2\n",
+    "    A[i][i+1] = 1\n",
+    "    A[i+1][i] = 1\n",
+    "\n",
+    "A[n-1][n-1] = -2\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([10.        , -3.33333333, 27.        ])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "b"
+    "A[1][0] = A[1][0] - (A[1][0]/A[0][1]) * A[0][1]"
    ]
   },
   {
@@ -98,7 +104,13 @@
     {
      "data": {
       "text/plain": [
-       "array([1., 2., 3.])"
+       "array([[-2.,  1.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0., -2.,  1., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  1., -2., ...,  0.,  0.,  0.],\n",
+       "       ...,\n",
+       "       [ 0.,  0.,  0., ..., -2.,  1.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  1., -2.,  1.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  1., -2.]])"
       ]
      },
      "execution_count": 12,
@@ -107,7 +119,7 @@
     }
    ],
    "source": [
-    "x"
+    "A"
    ]
   },
   {
