--- a/Projects/Project1/main.ipynb
+++ b/Projects/Project1/main.ipynb
@@ -2,13 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os, sys\n",
     "sys.path.append(os.path.abspath(os.path.join('../..')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import solvers"
    ]
   }
  ],
