--- a/Projects/Project4/test.ipynb
+++ b/Projects/Project4/test.ipynb
@@ -2,91 +2,244 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'process_top_wall' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 207\u001b[0m\n\u001b[0;32m    204\u001b[0m v_star \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((n_y\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m, n_x\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m))\n\u001b[0;32m    206\u001b[0m \u001b[38;5;66;03m# Call the function\u001b[39;00m\n\u001b[1;32m--> 207\u001b[0m A_p, A_e, A_w, A_n, A_s, source_x, source_y \u001b[38;5;241m=\u001b[39m \u001b[43mlink_coefficients\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    208\u001b[0m \u001b[43m    \u001b[49m\u001b[43mRe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha_uv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvelocity\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_y\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    209\u001b[0m \u001b[43m    \u001b[49m\u001b[43mu_face\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mv_face\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mu_star\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mv_star\u001b[49m\n\u001b[0;32m    210\u001b[0m \u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[3], line 178\u001b[0m, in \u001b[0;36mlink_coefficients\u001b[1;34m(Re, dx, dy, alpha_uv, velocity, n_x, n_y, u_face, v_face, p, u_star, v_star)\u001b[0m\n\u001b[0;32m    176\u001b[0m \u001b[38;5;66;03m# Main execution\u001b[39;00m\n\u001b[0;32m    177\u001b[0m process_interior()\n\u001b[1;32m--> 178\u001b[0m \u001b[43mprocess_boundaries\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    180\u001b[0m \u001b[38;5;66;03m# Apply relaxation factor\u001b[39;00m\n\u001b[0;32m    181\u001b[0m A_e \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m alpha_uv\n",
+      "Cell \u001b[1;32mIn[3], line 100\u001b[0m, in \u001b[0;36mlink_coefficients.<locals>.process_boundaries\u001b[1;34m()\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;66;03m# Process other boundaries (right, top, bottom walls)\u001b[39;00m\n\u001b[0;32m     99\u001b[0m process_right_wall()\n\u001b[1;32m--> 100\u001b[0m \u001b[43mprocess_top_wall\u001b[49m()\n\u001b[0;32m    101\u001b[0m process_bottom_wall()\n\u001b[0;32m    102\u001b[0m process_corners()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'process_top_wall' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def pressure_correction(imax, jmax, dx, dy, rho, u_star, v_star, p, alpha, Ap):\n",
+    "def link_coefficients(Re, dx, dy, alpha_uv, velocity, n_x, n_y, u_face, v_face, p, u_star, v_star):\n",
     "    \"\"\"\n",
-    "    Combined function for computing the pressure correction and the RHS for the pressure Poisson equation.\n",
+    "    Calculate coefficients for fluid dynamics simulation using vectorized operations.\n",
     "    \n",
-    "    Args:\n",
-    "    - imax, jmax: Grid sizes in the x and y directions\n",
-    "    - dx, dy: Grid spacing in the x and y directions\n",
-    "    - rho: Density of the fluid\n",
-    "    - u_star, v_star: Velocity components at the intermediate time step\n",
-    "    - p: Current pressure field\n",
-    "    - alpha: Relaxation factor for pressure update\n",
-    "    - Ap: Precomputed matrix for the pressure Poisson equation\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    Re : float\n",
+    "        Reynolds number\n",
+    "    dx, dy : float\n",
+    "        Grid spacing in x and y directions\n",
+    "    alpha_uv : float\n",
+    "        Relaxation factor\n",
+    "    velocity : float\n",
+    "        Top wall velocity\n",
+    "    n_x, n_y : int\n",
+    "        Grid dimensions\n",
+    "    u_face, v_face : np.ndarray\n",
+    "        Velocity components at cell faces\n",
+    "    p : np.ndarray\n",
+    "        Pressure field\n",
+    "    u_star, v_star : np.ndarray\n",
+    "        Predicted velocity components\n",
     "    \n",
     "    Returns:\n",
-    "    - pressure: Updated pressure field\n",
-    "    - p_prime: Pressure correction\n",
+    "    --------\n",
+    "    tuple\n",
+    "        (A_p, A_e, A_w, A_n, A_s, source_x, source_y)\n",
     "    \"\"\"\n",
+    "    # Initialize coefficient matrices\n",
+    "    A_p = np.zeros((n_y+1, n_x+1))\n",
+    "    A_e = np.zeros((n_y+1, n_x+1))\n",
+    "    A_w = np.zeros((n_y+1, n_x+1))\n",
+    "    A_n = np.zeros((n_y+1, n_x+1))\n",
+    "    A_s = np.zeros((n_y+1, n_x+1))\n",
     "    \n",
-    "    # Step 1: Calculate the right-hand side (bp) for the pressure Poisson equation\n",
-    "    bp = np.zeros((jmax - 2) * (imax - 2))  # Vector for RHS of pressure correction\n",
-    "    stride = jmax\n",
+    "    # Initialize source terms\n",
+    "    source_x = np.zeros(n_x * n_y)\n",
+    "    source_y = np.zeros(n_x * n_y)\n",
     "    \n",
-    "    # Loop to calculate the right-hand side for each node, except the pressure at (1,1)\n",
-    "    for j in range(1, jmax):\n",
-    "        for i in range(1, imax):\n",
-    "            position = i + (j - 1) * stride\n",
-    "            bp[position] = rho * (u_star[i, j] * dy - u_star[i + 1, j] * dy + v_star[i, j] * dx - v_star[i, j + 1] * dx)\n",
+    "    # Diffusion coefficients (constant throughout domain)\n",
+    "    D_e = dy / (dx * Re)\n",
+    "    D_w = D_e\n",
+    "    D_n = dx / (dy * Re)\n",
+    "    D_s = D_n\n",
     "    \n",
-    "    # Modify the first element of bp to be zero (boundary condition)\n",
-    "    bp[0] = 0\n",
+    "    # Helper function for max(0,x)\n",
+    "    def pos(x):\n",
+    "        return np.maximum(0, x)\n",
+    "    \n",
+    "    def process_interior():\n",
+    "        # Interior cells (vectorized)\n",
+    "        for i in range(2, n_y):\n",
+    "            for j in range(2, n_x):\n",
+    "                n = (i-1)*n_x + (j-1)\n",
+    "                \n",
+    "                # Calculate fluxes\n",
+    "                F_e = dy * u_face[i,j]\n",
+    "                F_w = dy * u_face[i,j-1]\n",
+    "                F_n = dx * v_face[i-1,j]\n",
+    "                F_s = dx * v_face[i,j]\n",
+    "                \n",
+    "                # Calculate coefficients\n",
+    "                A_e[i,j] = D_e + pos(-F_e)\n",
+    "                A_w[i,j] = D_w + pos(F_w)\n",
+    "                A_n[i,j] = D_n + pos(-F_n)\n",
+    "                A_s[i,j] = D_s + pos(F_s)\n",
+    "                A_p[i,j] = (D_e + D_w + D_n + D_s + \n",
+    "                           pos(F_e) + pos(-F_w) + pos(-F_s) + pos(F_n))\n",
+    "                \n",
+    "                # Source terms\n",
+    "                source_x[n] = (0.5*alpha_uv*(p[i,j-1] - p[i,j+1])*dy + \n",
+    "                             (1-alpha_uv)*A_p[i,j]*u_star[i,j])\n",
+    "                source_y[n] = (0.5*alpha_uv*(p[i+1,j] - p[i-1,j])*dx + \n",
+    "                             (1-alpha_uv)*A_p[i,j]*v_star[i,j])\n",
+    "    \n",
+    "    def process_boundaries():\n",
+    "        # Left wall (j=1)\n",
+    "        for i in range(2, n_y):\n",
+    "            n = (i-1)*n_x\n",
+    "            F_e = dy * u_face[i,1]\n",
+    "            F_w = dy * u_face[i,0]  # left face velocity is 0\n",
+    "            F_n = dx * v_face[i-1,1]\n",
+    "            F_s = dx * v_face[i,1]\n",
+    "            \n",
+    "            A_e[i,1] = D_e + pos(-F_e)\n",
+    "            A_n[i,1] = D_n + pos(-F_n)\n",
+    "            A_s[i,1] = D_s + pos(F_s)\n",
+    "            A_p[i,1] = (D_e + 2*D_w + D_n + D_s + \n",
+    "                       pos(F_e) + pos(-F_w) + pos(-F_s) + pos(F_n))\n",
+    "            \n",
+    "            source_x[n] = (0.5*alpha_uv*(p[i,1] - p[i,2])*dy + \n",
+    "                          (1-alpha_uv)*A_p[i,1]*u_star[i,1])\n",
+    "            source_y[n] = (0.5*alpha_uv*(p[i+1,1] - p[i-1,1])*dx + \n",
+    "                          (1-alpha_uv)*A_p[i,1]*v_star[i,1])\n",
+    "        \n",
+    "        # Process other boundaries (right, top, bottom walls)\n",
+    "        process_right_wall()\n",
+    "        process_top_wall()\n",
+    "        process_bottom_wall()\n",
+    "        process_corners()\n",
+    "    \n",
+    "    def process_right_wall():\n",
+    "        j = n_x\n",
+    "        for i in range(2, n_y):\n",
+    "            n = i*n_x - 1\n",
+    "            F_e = dy * u_face[i,j]\n",
+    "            F_w = dy * u_face[i,j-1]\n",
+    "            F_n = dx * v_face[i-1,j]\n",
+    "            F_s = dx * v_face[i,j]\n",
+    "            \n",
+    "            A_w[i,j] = D_w + pos(F_w)\n",
+    "            A_n[i,j] = D_n + pos(-F_n)\n",
+    "            A_s[i,j] = D_s + pos(F_s)\n",
+    "            A_p[i,j] = (2*D_e + D_w + D_n + D_s + \n",
+    "                       pos(F_e) + pos(-F_w) + pos(-F_s) + pos(F_n))\n",
+    "            \n",
+    "            source_x[n] = (0.5*alpha_uv*(p[i,j-1] - p[i,j])*dy + \n",
+    "                          (1-alpha_uv)*A_p[i,j]*u_star[i,j])\n",
+    "            source_y[n] = (0.5*alpha_uv*(p[i+1,j] - p[i-1,j])*dx + \n",
+    "                          (1-alpha_uv)*A_p[i,j]*v_star[i,j])\n",
+    "    \n",
+    "    def process_corners():\n",
+    "        # Top left corner\n",
+    "        process_corner(1, 1, 0)\n",
+    "        # Top right corner\n",
+    "        process_corner(1, n_x, n_x-1)\n",
+    "        # Bottom left corner\n",
+    "        process_corner(n_y, 1, (n_y-1)*n_x)\n",
+    "        # Bottom right corner\n",
+    "        process_corner(n_y, n_x, n_x*n_y-1)\n",
+    "    \n",
+    "    def process_corner(i, j, n):\n",
+    "        F_e = dy * u_face[i,j]\n",
+    "        F_w = dy * u_face[i,j-1]\n",
+    "        F_n = dx * v_face[i-1,j]\n",
+    "        F_s = dx * v_face[i,j]\n",
+    "        \n",
+    "        # Adjust coefficients based on corner position\n",
+    "        if i == 1:  # Top corners\n",
+    "            A_s[i,j] = D_s + pos(F_s)\n",
+    "            if j == 1:  # Top left\n",
+    "                A_e[i,j] = D_e + pos(-F_e)\n",
+    "                A_p[i,j] = (D_e + 2*D_w + 2*D_n + D_s + \n",
+    "                           pos(F_e) + pos(-F_w) + pos(-F_s) + pos(F_n))\n",
+    "                source_x[n] = (0.5*alpha_uv*(p[i,j] - p[i,j+1])*dy + \n",
+    "                             (1-alpha_uv)*A_p[i,j]*u_star[i,j] + \n",
+    "                             alpha_uv*velocity*(2*D_n + pos(-F_n)))\n",
+    "            else:  # Top right\n",
+    "                A_w[i,j] = D_w + pos(F_w)\n",
+    "                A_p[i,j] = (2*D_e + D_w + 2*D_n + D_s + \n",
+    "                           pos(F_e) + pos(-F_w) + pos(-F_s) + pos(F_n))\n",
+    "                source_x[n] = (0.5*alpha_uv*(p[i,j-1] - p[i,j])*dy + \n",
+    "                             (1-alpha_uv)*A_p[i,j]*u_star[i,j] + \n",
+    "                             alpha_uv*velocity*(2*D_n + pos(-F_n)))\n",
+    "            source_y[n] = (0.5*alpha_uv*(p[i+1,j] - p[i,j])*dx + \n",
+    "                         (1-alpha_uv)*A_p[i,j]*v_star[i,j])\n",
+    "        else:  # Bottom corners\n",
+    "            A_n[i,j] = D_n + pos(-F_n)\n",
+    "            if j == 1:  # Bottom left\n",
+    "                A_e[i,j] = D_e + pos(-F_e)\n",
+    "                A_p[i,j] = (D_e + 2*D_w + D_n + 2*D_s + \n",
+    "                           pos(F_e) + pos(-F_w) + pos(-F_s) + pos(F_n))\n",
+    "                source_x[n] = (0.5*alpha_uv*(p[i,j] - p[i,j+1])*dy + \n",
+    "                             (1-alpha_uv)*A_p[i,j]*u_star[i,j])\n",
+    "            else:  # Bottom right\n",
+    "                A_w[i,j] = D_w + pos(F_w)\n",
+    "                A_p[i,j] = (2*D_e + D_w + D_n + 2*D_s + \n",
+    "                           pos(F_e) + pos(-F_w) + pos(-F_s) + pos(F_n))\n",
+    "                source_x[n] = (0.5*alpha_uv*(p[i,j-1] - p[i,j])*dy + \n",
+    "                             (1-alpha_uv)*A_p[i,j]*u_star[i,j])\n",
+    "            source_y[n] = (0.5*alpha_uv*(p[i,j] - p[i-1,j])*dx + \n",
+    "                         (1-alpha_uv)*A_p[i,j]*v_star[i,j])\n",
+    "    \n",
+    "    # Main execution\n",
+    "    process_interior()\n",
+    "    process_boundaries()\n",
+    "    \n",
+    "    # Apply relaxation factor\n",
+    "    A_e *= alpha_uv\n",
+    "    A_w *= alpha_uv\n",
+    "    A_n *= alpha_uv\n",
+    "    A_s *= alpha_uv\n",
+    "    \n",
+    "    return A_p, A_e, A_w, A_n, A_s, source_x, source_y\n",
     "\n",
-    "    # Step 2: Solve the pressure Poisson equation for pressure correction (p_prime)\n",
-    "    p_prime_interior = pentaDiag_solve(Ap, bp)\n",
-    "    \n",
-    "    # Step 3: Convert the pressure correction into a matrix and update the pressure field\n",
-    "    p_prime = np.zeros((imax, jmax))\n",
-    "    z = 0\n",
-    "    for j in range(1, jmax):\n",
-    "        for i in range(1, imax):\n",
-    "            p_prime[i, j] = p_prime_interior[z]\n",
-    "            z += 1\n",
-    "            p[i, j] = p[i, j] + alpha * p_prime[i, j]\n",
-    "    \n",
-    "    # Apply boundary condition for pressure at (1,1)\n",
-    "    p[0, 0] = 0\n",
+    "import numpy as np\n",
     "\n",
-    "    # Return the updated pressure and pressure correction matrices\n",
-    "    return p, p_prime\n",
+    "# Initialize your parameters\n",
+    "Re = 100  # Reynolds number\n",
+    "dx = 0.1  # grid spacing in x\n",
+    "dy = 0.1  # grid spacing in y\n",
+    "alpha_uv = 0.7  # relaxation factor\n",
+    "velocity = 1.0  # top wall velocity\n",
+    "n_x = 50  # grid points in x\n",
+    "n_y = 50  # grid points in y\n",
     "\n",
-    "def pentaDiag_solve(Ap, bp):\n",
-    "    \"\"\"\n",
-    "    Solves a pentadiagonal matrix system using the Thomas algorithm (for pentadiagonal systems).\n",
-    "    \n",
-    "    Args:\n",
-    "    - Ap: Coefficient matrix for the pressure Poisson equation\n",
-    "    - bp: Right-hand side vector\n",
-    "    \n",
-    "    Returns:\n",
-    "    - Solution vector for pressure corrections\n",
-    "    \"\"\"\n",
-    "    # Assuming Ap is a precomputed coefficient matrix and bp is the right-hand side vector\n",
-    "    # Placeholder for the actual implementation of the pentadiagonal solver.\n",
-    "    # Replace with your specific solver for the pentadiagonal system.\n",
+    "# Initialize your arrays (example)\n",
+    "u_face = np.zeros((n_y+1, n_x+1))\n",
+    "v_face = np.zeros((n_y+1, n_x+1))\n",
+    "p = np.zeros((n_y+1, n_x+1))\n",
+    "u_star = np.zeros((n_y+1, n_x+1))\n",
+    "v_star = np.zeros((n_y+1, n_x+1))\n",
     "\n",
-    "    n = len(bp)\n",
-    "    # Forward elimination\n",
-    "    for i in range(1, n):\n",
-    "        m = Ap[i] / Ap[i-1]\n",
-    "        Ap[i] = Ap[i] - m * Ap[i-1]\n",
-    "        bp[i] = bp[i] - m * bp[i-1]\n",
+    "# Call the function\n",
+    "A_p, A_e, A_w, A_n, A_s, source_x, source_y = link_coefficients(\n",
+    "    Re, dx, dy, alpha_uv, velocity, n_x, n_y,\n",
+    "    u_face, v_face, p, u_star, v_star\n",
+    ")\n",
     "\n",
-    "    # Back substitution\n",
-    "    x = np.zeros(n)\n",
-    "    x[n-1] = bp[n-1] / Ap[n-1]\n",
-    "    for i in range(n-2, -1, -1):\n",
-    "        x[i] = (bp[i] - Ap[i] * x[i+1]) / Ap[i]\n",
-    "\n",
-    "    return x\n"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
